fixed more alignement also slightly tweaked project descriptions

--- a/src/sections/Hero/HeroStyles.module.css
+++ b/src/sections/Hero/HeroStyles.module.css
@@ -5,6 +5,7 @@
     text-align: center;
     gap: 20px;
     min-height: 100dvh;
+    padding: 0 30px;
 
     .hero {
         max-width: 200px;
